# ai-engineering

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  retrieval_generation.py
apps/api/src/api/api/: endpoints.py  models.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb  README.md
src/: app.py
