[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hy2272", email = "hanfeiyao@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "google-genai>=2.9.0",
    "groq>=1.5.0",
    "langsmith>=0.9.3",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.source]
shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
]
